# seam-carving

./: Cargo.toml  README.md  TODO.md  index.html  update_wasm.sh  worker.js
benches/: seam_benchs.rs
docs/: seam_stitching.js  seam_stitching_bg.wasm  worker.js
docs/pkg/: package.json  seam_stitching.d.ts  seam_stitching_bg.wasm.d.ts
src/: lib.rs  main.rs  wasm.rs
