[package]
name = "seam-stitching"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
image = "0.25.10"
js-sys = "0.3.94"
rayon = "1.11.0"
wasm-bindgen = "0.2.117"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "seam_benchs"
harness = false
